--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 14.16.0
       - name: Install dependencies
-        run: npm ci
+        run: npm run ci
       - name: Create new release
         env:
           GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
